--- a/travel.html
+++ b/travel.html
@@ -67,14 +67,68 @@
 			<div class="col-lg-6">
 
 				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/scotland-min.jpg" alt="" /></div></a>
-				<h4>Edinburgh, Scotland, UK</h4>
+				<h4>Edinburgh, UK</h4>
 				<p>Aug 2022</p>
 			</div>
 			<div class="col-lg-6">
 				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/hawaii-min.jpg" alt="" /></div></a>
-				<h4>Honolulu, Hawaii, USA</h4>
+				<h4>Honolulu, USA</h4>
 				<p>Dec 2021</p>
 			</div>
+
+		</div><!-- /row -->
+		<div class="row centered">	
+			<div class="col-lg-6">
+
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/nola-min.jpg" alt="" /></div></a>
+				<h4>New Orleans, USA</h4>
+				<p>July 2021</p>
+			</div>
+			<div class="col-lg-6">
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/taichung-min.jpg" alt="" /></div></a>
+				<h4>Taichung, Taiwan</h4>
+				<p>Dec 2020</p>
+			</div>
+
+		</div><!-- /row -->
+		<div class="row centered">	
+			<div class="col-lg-6">
+
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/tokyo-min.jpg" alt="" /></div></a>
+				<h4>Tokyo, Japan</h4>
+				<p>Sep 2019</p>
+			</div>
+			<div class="col-lg-6">
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/osaka-min.jpg" alt="" /></div></a>
+				<h4>Osaka, Japan</h4>
+				<p>Sep 2019</p>
+			</div>
+
+		</div><!-- /row -->
+
+		<div class="row centered">	
+			<div class="col-lg-6">
+
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/sydney-min.jpg" alt="" /></div></a>
+				<h4>Sydney, Australia</h4>
+				<p>Dec 2018, Jan 2019</p>
+			</div>
+			<div class="col-lg-6">
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/amsterdam-min.jpg" alt="" /></div></a>
+				<h4>Amsterdam, Netherlands</h4>
+				<p>Nov 2018</p>
+			</div>
+
+		</div><!-- /row -->
+
+		<div class="row centered">	
+			<div class="col-lg-6">
+
+				<a class="" href=""><div class="portfolio"><img class="img-responsive folio_icon center" src="/assets/img/travel/sydney-min.jpg" alt="" /></div></a>
+				<h4>Tbilisi, Georgia</h4>
+				<p>Nov 2018</p>
+			</div>
+
 
 		</div><!-- /row -->
 		
