--- a/travel.html
+++ b/travel.html
@@ -59,7 +59,7 @@
 				<h3>Travel</h3>
 				<hr>
 				<p>I've been to a lot of places, sometimes for work, sometimes for fun. Currently under construction. I would like to turn this into somewhat of a travel blog in the future, but we'll see how it turns out.
-					This will be left as a gallery for now.
+					This will just be a gallery for now.
 				</p>
 			</div>
 		</div>
