--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
 	</div><!-- /container -->
 
 	<div class="container">
-		<div class="col-lg-8 col-lg-offset-2 centered" ><h4><a href="assets/pdf/Resume_Kenneth_Chang_06.02.2021.pdf">My most Recent Resume</a></h4></div>
+		<div class="col-lg-8 col-lg-offset-2 centered" ><h4><a href="assets/pdf/Resume_Kenneth_Chang_09.05.2022.pdf">My most recent Resume</a></h4></div>
 	</div>
 	
 	
