--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<p>Welcome to my personal website, blog, and depository of random thoughts. </p>
 					<p>I am a biomedical engineer by training from <a href="https://bme.ucdavis.edu/">UC Davis</a> and currently working in R&D at <a href="https://prodeonmedical.com/">Prodeon Medical</a>. </p>
 					<p>But my brain likes exploring and I wanted a way to document and share my journeys. And so this website was born.</p>
-					<P>It's still under construction, but feel free to take a look around. You can contact me <a href="https://www.linkedin.com/in/kennethcchang/">here</a> if you want to chat. </P>
+					<P>It's still under construction, but feel free to take a look around. You can contact me on Linkedin <a href="https://www.linkedin.com/in/kennethcchang/">here</a> if you want to chat. </P>
 					<br>
 
 					<!-- <p>Contact me <a href="https://www.linkedin.com/in/kennethcchang/">here</a> if you want to chat.</p> -->
