--- a/work/work02.html
+++ b/work/work02.html
@@ -64,7 +64,9 @@
           where teams of 3 competed against each other for cash prizes. You can check out our website <a href="https://www.arkives.info/">here</a>.
         </p>
         <P>
-          Technically, I was CTO, Chief Technology Officer. I was responsible for all of our technical projects: building tools that improved the live-stream and competitive experience, 
+          Since this started as a side project with friends, we didn't technically have official job titles.
+          The closest descriptor of my work would probably be CTO, Chief Technology Officer. 
+          I was responsible for all of our technical projects: building tools that improved the live-stream and competitive experience, 
           tournament analytics, SEO efforts, and technical collaborations. But since there was only ever five people, I wore a lot more hats then just purely tech development, from stream moderating to creating video clips for social media posts.</P>
         <p>
           The title was fancy, but that wasn't really the point. The proudest moments were the messages of thanks from competitors and the viewers.
