--- a/work.html
+++ b/work.html
@@ -58,7 +58,7 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Work</h3>
 				<hr>
-				<p>My work experience has primarily focused on the medical device field, specifically in Research and Development. But I've also tried to explore my other passions, like video games, as well. Under Construction</p>
+				<p>My work experience has primarily focused on the medical device field, specifically in Research and Development. But I've also tried to explore my other passions, like video games, as well.</p>
 			</div>
 		</div>
 		<div class="row centered">	
