--- a/work/work01.html
+++ b/work/work01.html
@@ -92,6 +92,7 @@
           I collaborated extensively with both senior engineers and outside manufacturing firms to test new concepts and ideas, rapidly iterate to meet our requirements, solve emerging problems, manage the project schedule.
           Through that collaborative effort, I was able to produce multiple generations of designs, each taking input and feedback from previous generations.
           Designs and components that I was responsible were successfully used in Animal, First-in-Human, and Investigational Device Exemption(IDE) Clinical Trials. 
+          CAD wise, I worked mainly in <a href="https://www.solidworks.com/">SolidWorks</a>
           Certain portions of my work are now in the public domain, see patents listed below:
         </p>
         <p>
