--- a/projects/project02.html
+++ b/projects/project02.html
@@ -68,17 +68,17 @@
 
         </p>
         <p>
-          The one month challenge was something that I saw on youtube, where a game dev and reviewer challenged themselves to create a new game every month. 
+          The one-month challenge was something that I saw on YouTube, where a game developer and reviewer challenged themselves to create a new game every month. 
           It seemed like a good solution to a common problem I faced whenever I tried working on side project. 
           Whenever I worked on a side project, I would always have this burst of enthusiasm, as I learned new things and began putting together a prototype. 
-          However, after awhile, I would hit what I call the "Wall of Apathy". 
+          However, after a while, I would hit what I call the "Wall of Apathy". 
           I would lose most if not all of my motivation for this project, and working on anything related to it felt like a chore. 
           And then because of this, everything else all of a sudden looked more interesting. 
           The end result being a lot of unfinished side projects, all in various half-built states. 
-          The one month challenge idea seemed like it would help mitigate this. 
+          The one-month challenge idea seemed like it would help mitigate this. 
           By holding myself to a shorter schedule, I would be constantly exposed to new ideas, constantly resetting when the Wall would hit.
-          In addition, it would also force me to prioritize which key features I would need to build out, rather then get lost in feature creep as I thought up new distractions and ideas. 
-          So with all that in mind, I embarked on my journey into video game development. 
+          In addition, it would also force me to prioritize which key features I would need to build out, rather than get lost in feature creep as I thought up new distractions and ideas. 
+          With all that in mind, I embarked on my journey into video game development. 
         </p>
 			</div>
 		</div>
@@ -88,7 +88,7 @@
         <h2 id=sec1 alt="">Dev Diary, Game 1, Chimera</h2>
 				<p>
           My main goal for the first game was to explore the idea of procedural generation.
-          I played alot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
+          I played a lot of looter type games, such as Diablo, Path of Exile, and Borderlands, and I became fascinated with the variety that procedural generation could provide to the player. 
           I wanted to play with that myself, and hence the idea for my first game was born.
         </p>
         <p>
@@ -116,9 +116,9 @@
           Even simple things, like a "piercing bullet", that could keep going through enemies after it hit, took quite a bit of effort to figure out.
           Ability wise, I only really incorporated a dash mechanic, since that was simple to program. 
           I would have liked to incorporate more complexity here as well, and maybe incorporate some of the procedural generation here as well. 
-          One idea I had was that rather then having everything available, the abilities and weapon powerups would randomly show up in the shop as well.
+          One idea I had was that rather than having everything available, the abilities and weapon powerups would randomly show up in the shop as well.
           This would force the player to adapt and play differently every time based on what the shop gave them. 
-          Overall though, I am proud of what I was able to create as my first game. 
+          Overall, I am proud of what I was able to create as my first game. 
           You can find the game files <a href="https://github.com/scryvener/GameDev-Chimera/tree/main">here</a>.
         </p>
 
@@ -145,12 +145,12 @@
           The other assets, such as the ground tiles I also posted here, so you can see what I was going for. 
           I honestly didn't expect anything remotely good looking, so the fact they looked like flowers and they looked like they were actually blooming/wilting was like a slam dunk for me.
           Unfortunately, it was here that the "Wall of Apathy" returned, and hard. 
-          Just getting the assets seen here was an exhausting endeavour for me, eating up close to a week and a half of time. 
+          Just getting the assets seen here was an exhausting endeavor for me, eating up close to a week and a half of time. 
           During this, there was no coding, no planning of game mechanics, nothing but opening up Inkscape to work on art assets. 
           And that grind is what I think ultimately triggered the wall, and a lot of frustration.
           I felt like I was wasting time, since I had to put in a ton of work just to get started.
           All this culminated into me deciding to take a break from this.
-          The frustration had baiscally boiled over into burn-out.
+          The frustration had basically boiled over into burn-out.
           I didn't get very far with this game, but you can see some of the assets and initial animation I worked on for it.
         </p>
 
@@ -185,17 +185,17 @@
         <h2 id=sec3 alt="">Looking back</h2>
 				<p>
           I think overall I enjoyed my time trying to make video games, even if I managed to burn myself out in seemingly record time.
-          Looking back, the artificial 1 month schedule I tried to hold myself to didn't really help either.
+          Looking back, the artificial one-month schedule I tried to hold myself to didn't really help either.
           I never really got a break, and the original intent of "resetting" my attention by switching to different games didn't quite work out like I intended. 
-          The wall of apathay still arrived, and combined with a task that I didn't enjoy doing, the entire effort ground to a halt.
+          The Wall of Apathy still arrived, and combined with a task that I didn't enjoy doing, the entire effort ground to a halt.
         </p>
         <p>
           In terms of what I would do differently, I think the biggest change would be to just bite the bullet and use some pre-made asset packs. 
           I was aware these existed, but I had stubbornly clung to the idea that I could do everything myself. 
-          But as my cousin who worked in game design pointed out, the amount of time that I spent on trying to create artistic content would have been better served actually working on game mechanics, writing the story, ie anything else.
-          I think that would have helped stymie the wall of apathy, since I would have actually enjoyed doing those tasks. 
+          But as my cousin who worked in game design pointed out, the amount of time that I spent on trying to create artistic content would have been better served actually working on things I enjoyed, such as game mechanics or writing the story.
+          I think that would have helped stymie the wall of apathy, since I would have been working on things I enjoyed rather than slogging my way through art design. 
           The other change I would have made was to lengthen the time period I gave myself. 
-          1 month was far too ambitious, especialy since I was just starting out and getting a feel of the basics. 
+          1 month was far too ambitious, especially since I was just starting out and getting a feel of the basics. 
           Something longer, like say 3 months, would have allowed me to go more in depth with each game, apply way more polish, and have a better, finished product overall. 
         </p>
         <p>
