--- a/projects/project04.html
+++ b/projects/project04.html
@@ -61,7 +61,7 @@
 				<hr>
 				<p>I really enjoyed playing with laser etching during the time at SAGE, so I thought I would try and make something on my own.
            My initial idea was to create something like a shadowbox, using etched clear material in order to create a shadow affect when a light was shown behind it.
-          However, I soon discovered that on of the material types available to etch/cut was textile based materials, like suede.
+          However, I soon discovered that of the material types available to etch/cut was textile materials, like suede.
           My curiosity took off, and after some initial experimentation, I decided that I would try to make a custom notebook cover.</p>
 			</div>
 		</div>
@@ -71,7 +71,7 @@
         <h2 id=sec1 alt="">Design and Experimentation</h2>
 				<p>
           The first order of business was to figure out a design. 
-          Given my predeliction toward mapping, one idea that struck me was the phrase "Here be Dragons". Originally, the term was used to mark unknown or unexplored areas on a map.
+          One idea that struck me was the phrase "Here be Dragons". Originally, the term was used to mark unknown or unexplored areas on a map.
           Thematically, I thought this would be quite cool.
           Here be dragons, says the notebook, filled with unknown wonders or dangers.
           Given my limited artistic skills, I decided to try and use imagery from some video games I was a fan of online.
@@ -98,7 +98,7 @@
           I would leave addition material, almost like a book flap on each end to be folded over and glued, creating a sleeve that the front/back of the notebook could be inserted into.
           I had some gorilla glue laying around, and some experimentation proved that it held quite well on the suede. 
           I also had to test exactly how much material I would need to leave in order to effectively create the flaps. 
-          Rather then waste money ordering more material, I figured I could just use paper cutouts as a stand-in.
+          Rather than waste money ordering more material, I figured I could just use paper cutouts as a stand-in.
         </p>
 
       </div>
