small proofread and links

--- a/work/work02.html
+++ b/work/work02.html
@@ -73,7 +73,7 @@
           The best memories were from working with my friends. Getting to combine my passion for analytics with my hobby of video games was a dream come true. 
           I had a lot of fun working on this, even if issues with the game outside our control led to its early end, and many projects unfinished.</p>
         <p>
-          
+          I compiled a GitHub repository <a href="https://github.com/scryvener/SAGE_Tech">here</a> of scripts and other tech I worked on for SAGE here.
         </p>
       </div>
       <div >
