--- a/projects/project01.html
+++ b/projects/project01.html
@@ -195,6 +195,12 @@
           You can see the final report that I put together at the Google Drive link below: <br>
           <a href="https://drive.google.com/file/d/1bb5DIm9BjjmYwgM7HVslVs5ZhpzzUwRn/view?usp=sharing">Sample Author Profile</a>
         </p>
+
+        <p>
+          While running the analysis, I also came upon the idea of running community detection, i.e. using something like the <a href="https://en.wikipedia.org/wiki/Louvain_method">Louvain Method</a>.
+          However, this turned out to be a bit more difficult than I had initially realized, and would require some pre-processing to collapse the citation relations onto the author nodes. 
+          This was technically possible, but I wanted to do more research into clustering and other community detection methods before implementation, so I decided to leave it as a nice-to-have for now.
+        </p>
         
 
         
