--- a/projects/project01.html
+++ b/projects/project01.html
@@ -238,7 +238,7 @@
           Below shows the graph network structure where all publications related to a certain topic, and then their authors, were pulled.
           Each author node in the illustration is then colored by scale to show how high their average published PageRank score is.
           <!-- cluster graph  -->
-          <img style="max-width: 60vw;" class="centered" src="../assets/img/projects/Cartographer/Author_CoAuthor_Cluster_Export.png">
+          <img style="max-width: 60vw;" class="centered" src="../assets/img/projects/Cartographer/Author_CoAuthor_Cluster.PNG">
           You can easily see the large “collaboration community” in the center, representing authors that often work together.
           Combining with the PageRank weights confirms that this cluster represents high-weight authors, so this group is the highly involved in publishing, highly cited and respected community of this topic.
           If you wanted to develop a new product in this space, these would be the community you would want to get into. 
