--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 	<!--headerfooterscript-->
     <script src="/assets/js/HeaderFooterLoad.js"></script>
 
+	
+
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -31,6 +34,8 @@
   </head>
 
   <body>
+	<a title="Privacy-friendly Web Analytics" href="https://clicky.com/101380509"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+	<script async src="//static.getclicky.com/101380509.js"></script>
 
     <!-- Static navbar -->
     <div class="navbar navbar-inverse navbar-static-top" >
