--- a/projects/project05.html
+++ b/projects/project05.html
@@ -98,7 +98,7 @@
 			<div>
         <h2 id=sec2 alt="">Results and Analysis</h2>
 				<p>
-          You can see the script file I used <a href="">here</a>. 
+          You can see the script file I used <a href="https://github.com/scryvener/GoogleTrendsAnalysis">here</a>. 
         </p>
         <p>
           Preparing and processing the data after downloading it from Google Trends was a relatively simple affair, with most of the cleaning effort going to processing Google's weird csv export format.
@@ -117,7 +117,7 @@
           After the results were counted up and converted into DataFrames using the pandas library, I then proceeded to create some visualizations.
         </p>
         <p>
-          I also took the chance to play with Seaborn.
+          I also took the chance to play with <a href="https://seaborn.pydata.org/">seaborn</a>.
           Seaborn had been on my radar as a visualization library, but I never really had an excuse to use it, so I wanted to take advantage of the opportunity here to try it out.
           I used it primarily to generate two plots, one showing 2020 and one showing 2021.
           I was initially going to use boxplots, but I also wanted to show how varied the distribution could be in some cases, so I decided to use violin plots instead.
