--- a/test.html
+++ b/test.html
@@ -59,6 +59,15 @@
 				<h3>Testing form</h3>
 				<hr>
 				<button onclick=""> Testing</button>
+
+				<form action="/action_page.php">
+					<label for="fname">First name:</label><br>
+					<input type="text" id="fname" name="fname" value="John"><br>
+					<label for="lname">Last name:</label><br>
+					<input type="text" id="lname" name="lname" value="Doe"><br><br>
+					<input type="submit" value="Submit">
+				</form>
+
 			</div>
 		</div>
 		
