--- a/test.html
+++ b/test.html
@@ -60,13 +60,11 @@
 				<hr>
 				<button onclick=""> Testing</button>
 
-				<form action="/action_page.php">
-					<label for="fname">First name:</label><br>
-					<input type="text" id="fname" name="fname" value="John"><br>
-					<label for="lname">Last name:</label><br>
-					<input type="text" id="lname" name="lname" value="Doe"><br><br>
-					<input type="submit" value="Submit">
-				</form>
+				<form action="welcome_get.php" method="get">
+					Name: <input type="text" name="name"><br>
+					E-mail: <input type="text" name="email"><br>
+					<input type="submit">
+					</form>
 
 			</div>
 		</div>
