--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
 				<hr>
 				<button onclick=""> Testing</button>
 
-				<form action="welcome_get.php" method="get">
+				<form action="action_page.php" method="get">
 					Name: <input type="text" name="name"><br>
 					E-mail: <input type="text" name="email"><br>
 					<input type="submit">
