--- a/test.html
+++ b/test.html
@@ -58,9 +58,9 @@
 			<div class="col-lg-6 col-lg-offset-3 centered">
 				<h3>Testing form</h3>
 				<hr>
-				<button onclick=""> Testing</button>
+				<button onclick="alert('hello')"> Testing</button>
 
-				<form action="action_page.php" method="get">
+				<form action="" method="get">
 					Name: <input type="text" name="name"><br>
 					E-mail: <input type="text" name="email"><br>
 					<input type="submit">
