--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@
 				<hr>
 				<button onclick="alert('hello')"> Testing</button>
 
-				<form action=" return alert('hello')" method="get">
+				<form onsubmit=" return alert('hello')">
 					Name: <input type="text" name="name"><br>
 					E-mail: <input type="text" name="email"><br>
 					<input type="submit">
