--- a/test.html
+++ b/test.html
@@ -29,6 +29,8 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+	<script src="/assets/iframe_ext/jquery_mostRecent.js"></script>  
   </head>
 
   <body>
@@ -60,14 +62,13 @@
 				<hr>
 				<button onclick="alert('hello')"> Testing</button>
 
-				<form onsubmit=" return alert('hello')">
-					Name: <input type="text" name="name"><br>
-					E-mail: <input type="text" name="email"><br>
-					<input type="submit">
-					</form>
-
 			</div>
 		</div>
+
+		<input type="text" id="subject">
+		<textarea id="body"></textarea>
+		<button type="button" id="send">Submit</button>
+
 		
 	</div><!-- /container -->
 	
