--- a/test.html
+++ b/test.html
@@ -30,7 +30,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-	<script src="/assets/iframe_ext/jquery_mostRecent.js"></script>  
+	<script src="/assets/iframe_ext/jquery_mostRecent.js"></script>
+	<script src="scripting.js"></script>  
   </head>
 
   <body>
