--- a/form_test.html
+++ b/form_test.html
@@ -13,7 +13,7 @@
 
 		<input type="text" id="subject">
 		<textarea id="body"></textarea>
-		<button type="button" id="send">Submit</button>
+		<button onclick="submitThings()" type="button" id="send">Submit</button>
 
 		
 	</div><!-- /container -->
