--- a/form_test.html
+++ b/form_test.html
@@ -11,7 +11,10 @@
 	
 	<div class="container pt">
 
+		<div>What is your name?</div>
 		<input type="text" id="subject">
+
+		<div>Please tell us how you feel</div>
 		<textarea id="body"></textarea>
 		<button onclick="submitThings()" type="button" id="send">Submit</button>
 
