--- a/test.html
+++ b/test.html
@@ -66,9 +66,7 @@
 			</div>
 		</div>
 
-		<input type="text" id="subject">
-		<textarea id="body"></textarea>
-		<button onclick="submitThings()" type="button" id="send">Submit</button>
+		<iframe title="Form" src="/form_test.html" height="80%" width="20%"></iframe>
 
 		
 	</div><!-- /container -->
