--- a/test.html
+++ b/test.html
@@ -66,7 +66,7 @@
 			</div>
 		</div>
 
-		<iframe title="Form" src="/form_test.html" height="80vh" width="80vw"></iframe>
+		<iframe title="Form" src="/form_test.html" height="100%" width="100%"></iframe>
 
 		
 	</div><!-- /container -->
