--- a/form_test.html
+++ b/form_test.html
@@ -16,7 +16,11 @@
 
 		<div>Please tell us how you feel</div>
 		<textarea id="body"></textarea>
-		<button onclick="submitThings()" type="button" id="send">Submit</button>
+
+		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
+
+		<div>misc placeholder things here </div>
+		
 
 		
 	</div><!-- /container -->
