--- a/form_test.html
+++ b/form_test.html
@@ -20,6 +20,9 @@
 		<div><button onclick="submitThings()" type="button" id="send">Submit</button></div>
 
 		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
 		
 
 		
