--- a/form_test.html
+++ b/form_test.html
@@ -29,7 +29,10 @@
 	</div><!-- /container -->
 
 	<div class="container pt">
-
+		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
+		<div>misc placeholder things here </div>
 	</div>
 
   </body>
